# msadvisor

./: .gitignore  LICENSE  OWNERS  README.md  requirements.txt  setup.py
auto-optimizer/: README.md  requirements.txt  setup.py
auto-optimizer/auto_optimizer/: __init__.py  __main__.py  model.cfg  options.py
auto-optimizer/test/: auto_optimizer  helper.py  test.sh  test_graph_basic.py  test_graph_crud.py  test_graph_eq.py  test_inference_example.py  test_knowledge_avgpool_split.py  test_knowledge_base.py  test_matcher.py  (+19 more)
auto_optimizer/: __init__.py  __main__.py
docs/: graph_refactor_API.md  graph_refactor_BaseGraph.md  graph_refactor_BaseNode.md  knowledge_optimizer_frame.md
ecosystem/: README.md  ecosystem.json
ecosystem/group2/data/project/: CMakeLists.txt  README.md  constant.py  main.cpp
migrating/: README.md  requirements.txt
test/: test.coverage  test.py  test.sh  test_graph_advanced.py  test_graph_basic.py  test_graph_crud.py  test_inference_example.py  test_initializer.py  test_knowledge_base.py  test_knowledge_conv1d2conv2d.py  test_knowledge_factory.py  test_knowledge_merge_casts.py  test_knowledge_merge_consecutive_slice.py  test_knowledge_merge_continue_concat.py  test_knowledge_merge_continue_slice.py  test_knowledge_merge_continue_sllice.py  test_knowledge_qkv_slice.py  test_knowledge_resize_mode.py  test_knowledge_resize_mode_to_nearest.py  test_knowledge_split_large_kernel.py  test_knowledge_split_qkv_matmul.py  test_knowledge_topk_fix.py  test_knowledge_transpose_huge_conv.py  test_knowledge_transpose_large_input_conv.py  test_knowledge_type_cast.py  test_knowlege_factory.py  test_matcher.py  test_node.py  test_node_common.py  test_pattern.py  test_placeholder.py  test_register.py  test_resnet.py  test_resnet50.py  utils.py
tools/: msadvisor.sh
training/: README.md  __init__.py  __main__.py  common.sh  msadvisor.sh  obs_access_config.json
(+421 files in other folders)
